alignment issue fixed

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,6 @@
 
 html,
 body {
-  overflow: hidden;
   margin: 0;
   padding: 0;
   font-family: "Open Sans", cursive;
